--- a/index.html
+++ b/index.html
@@ -1,277 +1,123 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mi Álbum de Fotos</title>
+  <title>Álbum en Firebase</title>
   <style>
-    :root{
-      --bg:#0f1115; --panel:#171a21; --muted:#3a4254; --text:#e7ebf3; --accent:#7aa2f7; --accent-2:#9ece6a; --danger:#f7768e;
-      --radius:16px;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0; font:14px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial, "Apple Color Emoji","Segoe UI Emoji"; background:var(--bg); color:var(--text)}
-
-    .app{display:grid; grid-template-columns:280px 1fr; grid-template-rows:auto 1fr; height:100vh}
-    header{grid-column:1/3; display:flex; gap:10px; align-items:center; padding:12px 16px; background:linear-gradient(180deg, rgba(255,255,255,.04), transparent); border-bottom:1px solid #222630; position:sticky; top:0; z-index:5}
-    header h1{margin:0; font-size:18px; letter-spacing:.3px}
-    header .spacer{flex:1}
-
-    .btn{border:1px solid #2a3140; background:#1a1e27; color:var(--text); padding:10px 12px; border-radius:12px; cursor:pointer; display:inline-flex; align-items:center; gap:8px}
-    .btn:hover{border-color:#3a4254}
-    .btn.primary{background:var(--accent); color:#0b1020; border-color:transparent}
-    .btn.ghost{background:transparent}
-    .btn.danger{background:transparent; border-color:#4a2030; color:#ff8fa3}
-
-    .sidebar{border-right:1px solid #222630; background:var(--panel); padding:14px; overflow:auto}
-    .sidebar h2{margin:6px 0 10px; font-size:13px; opacity:.8}
-    .album-list{display:flex; flex-direction:column; gap:6px}
-    .album{display:flex; align-items:center; justify-content:space-between; gap:8px; padding:10px 12px; border-radius:10px; cursor:pointer; border:1px solid transparent}
-    .album.active{background:#11141a; border-color:#2c3342}
-    .album .name{font-weight:600}
-    .album small{opacity:.6}
-
-    .new-album{display:flex; gap:8px; margin-top:10px}
-    .input{background:#0e121a; border:1px solid #262c39; border-radius:10px; color:var(--text); padding:10px 12px; outline:none}
-    .input:focus{border-color:#3b82f6}
-
-    .main{padding:16px; overflow:auto}
-    .toolbar{display:flex; flex-wrap:wrap; gap:8px; align-items:center; margin-bottom:12px}
-    .dropzone{border:1.8px dashed #2a3140; background:#0d1016; border-radius:var(--radius); padding:20px; display:flex; gap:12px; align-items:center}
-    .dropzone.dragover{border-color:var(--accent); background:rgba(122,162,247,.08)}
-    .search{min-width:220px}
-    .select{appearance:none; background:#0e121a; border:1px solid #262c39; color:var(--text); border-radius:10px; padding:10px 12px}
-
-    .grid{display:grid; grid-template-columns:repeat(auto-fill, minmax(180px, 1fr)); gap:12px}
-    .card{position:relative; border-radius:14px; overflow:hidden; background:#0b0e14; border:1px solid #232a38}
-    .thumb{aspect-ratio:1/1; width:100%; object-fit:cover; display:block}
-    .card .meta{position:absolute; bottom:0; left:0; right:0; padding:8px; background:linear-gradient(180deg, transparent, rgba(0,0,0,.6)); display:flex; justify-content:space-between; align-items:end}
-    .chip{background:rgba(0,0,0,.45); padding:4px 8px; border-radius:999px; font-size:12px}
-
-    dialog{border:none; border-radius:14px; padding:0; overflow:hidden; background:#0c0f15; color:var(--text); width:min(92vw, 980px)}
-    dialog::backdrop{background:rgba(0,0,0,.6)}
-    .lightbox{display:grid; grid-template-columns:1fr 320px; gap:0}
-    .lightbox .media{background:#0b0e14; display:flex; align-items:center; justify-content:center; min-height:60vh}
-    .lightbox img{max-width:100%; max-height:75vh}
-    .lightbox .side{border-left:1px solid #222630; padding:14px; display:flex; flex-direction:column; gap:10px}
-    .row{display:flex; gap:8px; align-items:center}
-    .row.wrap{flex-wrap:wrap}
-    .tags{display:flex; gap:6px; flex-wrap:wrap}
-
-    .empty{opacity:.7; border:1px dashed #2a3140; border-radius:14px; padding:24px; text-align:center}
-
-    .footer{display:flex; justify-content:space-between; align-items:center; padding:10px 14px; border-top:1px solid #222630; background:#0d1118}
-    .link{color:var(--accent); text-decoration:none}
+    body { font-family: sans-serif; margin: 0; padding: 1rem; background: #f3f4f6; }
+    header { font-size: 1.5rem; font-weight: bold; margin-bottom: 1rem; }
+    #albumList, #photoGrid { margin-top: 1rem; }
+    .photo-card { background: white; border-radius: 8px; padding: 0.5rem; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    .photo-card img { max-width: 100%; border-radius: 6px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 1rem; }
+    .controls { margin: 1rem 0; }
+    button { padding: 0.5rem 1rem; border: none; border-radius: 6px; cursor: pointer; background: #2563eb; color: white; }
+    button:hover { background: #1d4ed8; }
   </style>
 </head>
 <body>
-  <div class="app">
-    <header>
-      <h1>📸 Mi Álbum de Fotos</h1>
-      <div class="spacer"></div>
-      <button class="btn primary" id="btn-add" title="Agregar fotos">Subir fotos</button>
-      <input id="file-input" type="file" accept="image/*" multiple hidden />
-    </header>
+  <header>📷 Álbum en Firebase</header>
 
-    <aside class="sidebar">
-      <h2>Álbumes</h2>
-      <div class="album-list" id="album-list"></div>
-      <div class="new-album">
-        <input id="new-album-name" class="input" placeholder="Nuevo álbum" />
-        <button class="btn" id="create-album">Crear</button>
-      </div>
-    </aside>
+  <section class="controls">
+    <input type="file" id="fileInput" multiple />
+    <input type="text" id="albumInput" placeholder="Nombre del álbum" />
+    <button id="uploadBtn">Subir fotos</button>
+  </section>
 
-    <main class="main">
-      <div class="toolbar">
-        <div class="dropzone" id="dropzone">
-          <strong>Arrastra tus fotos aquí</strong>
-          <span style="opacity:.7">o usa “Subir fotos”</span>
-        </div>
-        <input id="search" class="input search" placeholder="Buscar por nombre o etiqueta" />
-        <select id="sort" class="select">
-          <option value="newest">Más recientes</option>
-          <option value="oldest">Más antiguas</option>
-          <option value="name">Nombre (A-Z)</option>
-        </select>
-      </div>
+  <section id="albumList">
+    <h3>Fotos subidas:</h3>
+    <div id="photoGrid" class="grid"></div>
+  </section>
 
-      <section id="grid" class="grid"></section>
-      <div id="empty" class="empty" style="display:none">Aún no hay fotos en este álbum.</div>
-    </main>
-  </div>
+  <script type="module">
+    // Importar Firebase
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-storage.js";
+    import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
 
-  <dialog id="viewer">
-    <div class="lightbox">
-      <div class="media"><img id="viewer-img" alt="" /></div>
-      <div class="side">
-        <div class="row wrap"><button class="btn" id="prev">◀</button><button class="btn" id="next">▶</button><button class="btn danger" id="delete">Eliminar</button></div>
-        <label>Nombre<input id="edit-name" class="input" /></label>
-        <label>Álbum<select id="edit-album" class="select"></select></label>
-        <label>Etiquetas<input id="edit-tags" class="input" placeholder="familia, viaje" /></label>
-        <div class="row wrap">
-          <button class="btn primary" id="save">Guardar cambios</button>
-          <span style="opacity:.7" id="meta"></span>
-        </div>
-      </div>
-    </div>
-  </dialog>
+    // Configuración de tu proyecto
+    const firebaseConfig = {
+      apiKey: "AIzaSyAQHwo1RwucIRAIlqpo3GgRJNmnQlXoNDM",
+      authDomain: "album-bc4e1.firebaseapp.com",
+      projectId: "album-bc4e1",
+      storageBucket: "album-bc4e1.firebasestorage.app",
+      messagingSenderId: "1041635546059",
+      appId: "1:1041635546059:web:79ff3e516a50b5190ddc4e",
+      measurementId: "G-RWGW4F6JCT"
+    };
 
-  <footer class="footer">
-    <small>Las fotos se guardan en Firebase Storage y los datos en Firestore.</small>
-  </footer>
+    // Inicializar Firebase
+    const app = initializeApp(firebaseConfig);
+    const storage = getStorage(app);
+    const db = getFirestore(app);
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-  import { getStorage, ref, uploadBytes, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-storage.js";
-  import { getFirestore, collection, addDoc, getDocs, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
+    const fileInput = document.getElementById("fileInput");
+    const albumInput = document.getElementById("albumInput");
+    const uploadBtn = document.getElementById("uploadBtn");
+    const photoGrid = document.getElementById("photoGrid");
 
-  // Tu config
-  const firebaseConfig = {
-    apiKey: "AIzaSyAQHwo1RwucIRAIlqpo3GgRJNmnQlXoNDM",
-    authDomain: "album-bc4e1.firebaseapp.com",
-    projectId: "album-bc4e1",
-    storageBucket: "album-bc4e1.firebasestorage.app",
-    messagingSenderId: "1041635546059",
-    appId: "1:1041635546059:web:79ff3e516a50b5190ddc4e",
-    measurementId: "G-RWGW4F6JCT"
-  };
+    // Subir fotos a Firebase Storage y guardar metadata en Firestore
+    async function uploadPhotos() {
+      const files = fileInput.files;
+      const album = albumInput.value || "general";
 
-  const app = initializeApp(firebaseConfig);
-  const storage = getStorage(app);
-  const db = getFirestore(app);
+      for (const file of files) {
+        const id = crypto.randomUUID();
+        const storageRef = ref(storage, `albums/${album}/${id}-${file.name}`);
+        await uploadBytes(storageRef, file);
+        const url = await getDownloadURL(storageRef);
 
-  // ===== Estado =====
-  let state = { albums: [{id:"default", name:"General"}], currentAlbum: "default", photos: [], current: null };
-
-  // ===== UI Helpers =====
-  const $ = (s, el=document) => el.querySelector(s);
-
-  // ===== Álbumes =====
-  function renderAlbums(){
-    const list = $('#album-list'); list.innerHTML = '';
-    for (const a of state.albums){
-      const el = document.createElement('div');
-      el.className = 'album'+(a.id===state.currentAlbum?' active':'');
-      el.innerHTML = `<span class="name">${a.name}</span>`;
-      el.onclick = ()=>{ state.currentAlbum = a.id; refreshPhotos(); renderAlbums(); };
-      list.appendChild(el);
+        await addDoc(collection(db, "photos"), {
+          id,
+          album,
+          name: file.name.replace(/\.[^.]+$/, ''),
+          createdAt: Date.now(),
+          url
+        });
+      }
+      await loadPhotos();
     }
-    const sel = $('#edit-album'); sel.innerHTML='';
-    for (const a of state.albums){
-      const opt = document.createElement('option'); opt.value=a.id; opt.textContent=a.name; sel.appendChild(opt);
+
+    // Cargar fotos desde Firestore
+    async function loadPhotos() {
+      photoGrid.innerHTML = "";
+      const snapshot = await getDocs(collection(db, "photos"));
+      const photos = snapshot.docs.map(d => d.data());
+      photos.sort((a, b) => b.createdAt - a.createdAt);
+
+      for (const p of photos) {
+        const card = document.createElement("div");
+        card.className = "photo-card";
+        card.innerHTML = `
+          <img src="${p.url}" alt="${p.name}">
+          <p><b>${p.name}</b></p>
+          <small>Álbum: ${p.album}</small><br>
+          <button data-id="${p.id}" data-album="${p.album}" data-name="${p.name}">Eliminar</button>
+        `;
+        card.querySelector("button").addEventListener("click", () => deletePhoto(p.id, p.album, p.name));
+        photoGrid.appendChild(card);
+      }
     }
-  }
 
-  $('#create-album').onclick = ()=>{
-    const name = $('#new-album-name').value.trim();
-    if (!name) return;
-    const id = crypto.randomUUID();
-    state.albums.push({id, name});
-    state.currentAlbum = id;
-    $('#new-album-name').value='';
-    renderAlbums();
-    refreshPhotos();
-  };
+    // Eliminar foto
+    async function deletePhoto(id, album, name) {
+      // Borrar Firestore
+      const snapshot = await getDocs(collection(db, "photos"));
+      const docRef = snapshot.docs.find(d => d.data().id === id);
+      if (docRef) await deleteDoc(doc(db, "photos", docRef.id));
 
-  // ===== Fotos =====
-  async function addPhotos(files, album){
-    for (const file of files){
-      if (!file.type.startsWith('image/')) continue;
-      const id = crypto.randomUUID();
-      const storageRef = ref(storage, `albums/${album}/${id}-${file.name}`);
-      await uploadBytes(storageRef, file);
-      const url = await getDownloadURL(storageRef);
-      await addDoc(collection(db, "photos"), {
-        id, album, name: file.name.replace(/\.[^.]+$/,''), createdAt: Date.now(), tags: [], url
-      });
+      // Borrar de Storage
+      const storageRef = ref(storage, `albums/${album}/${id}-${name}`);
+      await deleteObject(storageRef);
+
+      await loadPhotos();
     }
-    refreshPhotos();
-  }
 
-  async function refreshPhotos(){
-    const q = $('#search').value.trim().toLowerCase();
-    const sort = $('#sort').value;
-    const snap = await getDocs(collection(db, "photos"));
-    let rows = snap.docs.map(d=>d.data());
-    rows = rows.filter(p=> p.album===state.currentAlbum);
-    if (q) rows = rows.filter(p=> p.name.toLowerCase().includes(q) || (p.tags||[]).join(',').toLowerCase().includes(q));
-    if (sort==='newest') rows.sort((a,b)=> b.createdAt - a.createdAt);
-    if (sort==='oldest') rows.sort((a,b)=> a.createdAt - b.createdAt);
-    if (sort==='name') rows.sort((a,b)=> a.name.localeCompare(b.name));
-    state.photos = rows;
+    uploadBtn.addEventListener("click", uploadPhotos);
 
-    const grid = $('#grid'); grid.innerHTML='';
-    $('#empty').style.display = rows.length? 'none':'block';
-    for (const p of rows){
-      const card = document.createElement('div');
-      card.className='card';
-      const img = document.createElement('img'); img.src=p.url; img.className='thumb';
-      const meta = document.createElement('div'); meta.className='meta';
-      meta.innerHTML = `<span class="chip">${new Date(p.createdAt).toLocaleDateString()}</span>`;
-      card.appendChild(img); card.appendChild(meta);
-      card.onclick = ()=> openViewer(p.id);
-      grid.appendChild(card);
-    }
-  }
-
-  async function openViewer(id){
-    state.current = state.photos.find(p=>p.id===id);
-    const p = state.current;
-    $('#viewer-img').src = p.url;
-    $('#edit-name').value = p.name||'';
-    $('#edit-tags').value = (p.tags||[]).join(', ');
-    $('#edit-album').value = p.album;
-    $('#meta').textContent = new Date(p.createdAt).toLocaleString();
-    $('#viewer').showModal();
-  }
-
-  async function updatePhoto(id, patch){
-    const snap = await getDocs(collection(db,"photos"));
-    const docRef = snap.docs.find(d=>d.data().id===id);
-    if (docRef) await updateDoc(doc(db,"photos",docRef.id), patch);
-  }
-
-  async function deletePhoto(id){
-    const snap = await getDocs(collection(db,"photos"));
-    const docRef = snap.docs.find(d=>d.data().id===id);
-    if (docRef){
-      const data = docRef.data();
-      const storageRef = ref(storage, `albums/${data.album}/${data.id}-${data.name}.jpg`);
-      await deleteObject(storageRef).catch(()=>{});
-      await deleteDoc(doc(db,"photos",docRef.id));
-    }
-    $('#viewer').close();
-    refreshPhotos();
-  }
-
-  // ===== Eventos =====
-  $('#btn-add').onclick = ()=> $('#file-input').click();
-  $('#file-input').onchange = (e)=>{ addPhotos([...e.target.files], state.currentAlbum); e.target.value=''; };
-
-  const dz = $('#dropzone');
-  ['dragenter','dragover'].forEach(ev=> dz.addEventListener(ev,e=>{e.preventDefault(); dz.classList.add('dragover');}));
-  ['dragleave','drop'].forEach(ev=> dz.addEventListener(ev,e=>{e.preventDefault(); dz.classList.remove('dragover');}));
-  dz.addEventListener('drop', e=> addPhotos([...e.dataTransfer.files], state.currentAlbum));
-
-  $('#search').oninput = ()=> refreshPhotos();
-  $('#sort').onchange = ()=> refreshPhotos();
-  $('#save').onclick = ()=>{ updatePhoto(state.current.id,{name:$('#edit-name').value, tags:$('#edit-tags').value.split(',').map(s=>s.trim()).filter(Boolean), album:$('#edit-album').value}); refreshPhotos(); };
-  $('#delete').onclick = ()=> deletePhoto(state.current.id);
-  $('#prev').onclick = ()=> navViewer(-1);
-  $('#next').onclick = ()=> navViewer(1);
-
-  function navViewer(dir){
-    if (!state.current) return;
-    const i = state.photos.findIndex(x=> x.id===state.current.id);
-    let j = i+dir; if (j<0) j=state.photos.length-1; if (j>=state.photos.length) j=0;
-    openViewer(state.photos[j].id);
-  }
-
-  // ===== Init =====
-  renderAlbums();
-  refreshPhotos();
-</script>
+    // Cargar fotos al iniciar
+    loadPhotos();
+  </script>
 </body>
 </html>
