--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     canvas.width = w; canvas.height = h;
     const ctx = canvas.getContext('2d');
     ctx.drawImage(bmp, 0, 0, w, h);
-bnb    const thumb = canvas.toDataURL('image/jpeg', 0.8);
+    const thumb = canvas.toDataURL('image/jpeg', 0.8);
     return { thumb, width: bmp.width, height: bmp.height };
   }
 
@@ -308,7 +308,7 @@ bnb    const thumb = canvas.toDataURL('image/jpeg', 0.8);
 
   function renderAlbums() {
     const list = $('#album-list'); list.innerHTML = '';
-    for for (const a of state.albums) {
+    for (const a of state.albums) {
       const el = document.createElement('div');
       el.className = 'album' + (a.id === state.currentAlbum ? ' active' : '');
       el.innerHTML = `<span class="name">${a.name}</span><small data-count="${a.id}">…</small>`;
