--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Registro Mi - Álbum de Fotos</title>
+  <title>Registro - Mi Álbum de Fotos</title>
   <style>
     :root {
       --bg: #0f1115;
@@ -95,7 +95,7 @@
 
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getAuth, createUserWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
+    import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
     import { getFirestore, collection, addDoc, query, where, getDocs } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
 
     const firebaseConfig = {
@@ -136,6 +136,16 @@
         const userCredential = await createUserWithEmailAndPassword(auth, email, password);
         const user = userCredential.user;
 
+        // Esperar a que el estado de autenticación se actualice
+        await new Promise((resolve, reject) => {
+          const unsubscribe = onAuthStateChanged(auth, (currentUser) => {
+            if (currentUser && currentUser.uid === user.uid) {
+              unsubscribe();
+              resolve();
+            }
+          }, reject);
+        });
+
         // Guardar datos adicionales en Firestore
         await addDoc(collection(db, 'usuarios'), {
           uid: user.uid,
@@ -155,8 +165,10 @@
           alert('El correo electrónico no es válido.');
         } else if (error.code === 'auth/weak-password') {
           alert('La contraseña debe tener al menos 6 caracteres.');
+        } else if (error.code === 'permission-denied') {
+          alert('Permisos insuficientes. Verifica las reglas de Firestore.');
         } else {
-          alert('Error al registrarse. Intenta de nuevo.');
+          alert('Error al registrarse: ' + error.message);
         }
       }
     });
