--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     :root{
       --bg:#0f1115; --panel:#171a21; --muted:#3a4254; --text:#e7ebf3; --accent:#7aa2f7; --accent-2:#9ece6a; --danger:#f7768e;
       --radius:16px;
+      --grid-columns: 4;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -16,7 +17,8 @@
 
     .app{display:grid; grid-template-columns:280px 1fr; grid-template-rows:auto 1fr; height:100vh}
     header{grid-column:1/3; display:flex; gap:10px; align-items:center; padding:12px 16px; background:linear-gradient(180deg, rgba(255,255,255,.04), transparent); border-bottom:1px solid #222630; position:sticky; top:0; z-index:5}
-    header h1{margin:0; font-size:18px; letter-spacing:.3px}
+    header h1{margin:0; font-size:18px; letter-spacing:.3px; display:flex; align-items:center; gap:8px}
+    header .user-name{font-weight:400; opacity:.8}
     header .spacer{flex:1}
 
     .btn{border:1px solid #2a3140; background:#1a1e27; color:var(--text); padding:10px 12px; border-radius:12px; cursor:pointer; display:inline-flex; align-items:center; gap:8px}
@@ -44,10 +46,14 @@
     .search{min-width:220px}
     .select{appearance:none; background:#0e121a; border:1px solid #262c39; color:var(--text); border-radius:10px; padding:10px 12px}
 
-    .grid{display:grid; grid-template-columns:repeat(auto-fill, minmax(180px, 1fr)); gap:12px}
+    .grid{display:grid; grid-template-columns:repeat(var(--grid-columns), minmax(0, 1fr)); gap:12px}
+    .list{display:flex; flex-direction:column; gap:8px}
     .card{position:relative; border-radius:14px; overflow:hidden; background:#0b0e14; border:1px solid #232a38}
+    .card.list-view{display:flex; align-items:center; padding:10px}
     .thumb{aspect-ratio:1/1; width:100%; object-fit:cover; display:block}
+    .card.list-view .thumb{width:80px; height:80px; flex-shrink:0}
     .card .meta{position:absolute; bottom:0; left:0; right:0; padding:8px; background:linear-gradient(180deg, transparent, rgba(0,0,0,.6)); display:flex; justify-content:space-between; align-items:end}
+    .card.list-view .meta{position:static; background:none; flex:1; padding:0 10px}
     .chip{background:rgba(0,0,0,.45); padding:4px 8px; border-radius:999px; font-size:12px}
 
     dialog{border:none; border-radius:14px; padding:0; overflow:hidden; background:#0c0f15; color:var(--text); width:min(92vw, 980px)}
@@ -59,6 +65,13 @@
     .row{display:flex; gap:8px; align-items:center}
     .row.wrap{flex-wrap:wrap}
     .tags{display:flex; gap:6px; flex-wrap:wrap}
+
+    .settings-dialog{padding:20px; display:flex; flex-direction:column; gap:16px}
+    .settings-dialog h2{margin:0; font-size:16px}
+    .settings-section{border-bottom:1px solid #222630; padding-bottom:16px}
+    .settings-section:last-child{border-bottom:none}
+    .settings-section label{display:block; margin:8px 0}
+    .settings-section select{width:100%; padding:10px; border-radius:8px}
 
     .empty{opacity:.7; border:1px dashed #2a3140; border-radius:14px; padding:24px; text-align:center}
 
@@ -127,8 +140,9 @@
 
   <div class="app hidden" id="app">
     <header>
-      <h1>📸 Mi Álbum de Fotos</h1>
+      <h1>📸 Mi Álbum de Fotos <span id="user-name" class="user-name"></span></h1>
       <div class="spacer"></div>
+      <button class="btn ghost" id="btn-settings" title="Configuración">⚙️ Configuración</button>
       <button class="btn ghost" id="btn-logout" title="Cerrar sesión">Cerrar Sesión</button>
       <button class="btn ghost" id="btn-export" title="Exportar respaldo (JSON)">Exportar</button>
       <label class="btn ghost" for="import-input" title="Importar respaldo (JSON)">Importar</label>
@@ -180,6 +194,41 @@
       </div>
     </dialog>
 
+    <dialog id="settings">
+      <div class="settings-dialog">
+        <h2>Configuración</h2>
+        <div class="settings-section">
+          <h3>Vista de Galería</h3>
+          <label>
+            Tamaño de la cuadrícula:
+            <select id="grid-size" class="select">
+              <option value="2">2 columnas</option>
+              <option value="4" selected>4 columnas</option>
+              <option value="6">6 columnas</option>
+            </select>
+          </label>
+          <label>
+            Tipo de vista:
+            <select id="view-type" class="select">
+              <option value="grid" selected>Cuadrícula</option>
+              <option value="list">Lista</option>
+            </select>
+          </label>
+        </div>
+        <div class="settings-section">
+          <h3>Almacenamiento</h3>
+          <p id="storage-usage">Calculando uso de almacenamiento...</p>
+        </div>
+        <div class="settings-section">
+          <h3>Fotos Eliminadas</h3>
+          <p>Papelera no implementada. Las fotos eliminadas se borran permanentemente.</p>
+        </div>
+        <div class="row">
+          <button class="btn primary" id="close-settings">Cerrar</button>
+        </div>
+      </div>
+    </dialog>
+
     <footer class="footer">
       <small>Los datos se guardan en Firebase Storage y Firestore.</small>
       <a class="link" href="#" id="clear-all">Borrar todo</a>
@@ -189,7 +238,7 @@
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
     import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
-    import { getStorage, ref as storageRef, uploadBytes, getDownloadURL, deleteObject } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js';
+    import { getStorage, ref as storageRef, uploadBytes, getDownloadURL, deleteObject, getMetadata } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js';
     import { getFirestore, collection, addDoc, getDocs, doc, getDoc, updateDoc, deleteDoc, query, where } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
 
     const firebaseConfig = {
@@ -211,11 +260,19 @@
     const loginContainer = document.getElementById('loginContainer');
     const appContainer = document.getElementById('app');
 
-    onAuthStateChanged(auth, (user) => {
+    onAuthStateChanged(auth, async (user) => {
       if (user) {
         loginContainer.classList.add('hidden');
         appContainer.classList.remove('hidden');
-        init();
+        try {
+          const userDoc = await getDoc(doc(db, 'usuarios', user.uid));
+          if (userDoc.exists()) {
+            document.getElementById('user-name').textContent = userDoc.data().fullName;
+          }
+          init();
+        } catch (error) {
+          alert('Error al cargar datos del usuario');
+        }
       } else {
         loginContainer.classList.remove('hidden');
         appContainer.classList.add('hidden');
@@ -269,6 +326,30 @@
       } catch (error) {
         alert('Error al cerrar sesión');
       }
+    });
+
+    // Abrir diálogo de configuración
+    document.getElementById('btn-settings').addEventListener('click', () => {
+      document.getElementById('settings').showModal();
+      updateStorageUsage();
+    });
+
+    // Cerrar diálogo de configuración
+    document.getElementById('close-settings').addEventListener('click', () => {
+      document.getElementById('settings').close();
+    });
+
+    // Cambiar tamaño de cuadrícula
+    document.getElementById('grid-size').addEventListener('change', (e) => {
+      document.documentElement.style.setProperty('--grid-columns', e.target.value);
+      refreshPhotos();
+    });
+
+    // Cambiar tipo de vista
+    document.getElementById('view-type').addEventListener('change', (e) => {
+      const grid = document.getElementById('grid');
+      grid.className = e.target.value;
+      refreshPhotos();
     });
 
     // ======= Utilidades UI =======
@@ -352,6 +433,7 @@
             height,
             fullUrl,
             thumbUrl,
+            size: file.size, // Guardar tamaño del archivo
             userId: auth.currentUser.uid
           });
         } catch (error) {}
@@ -422,6 +504,33 @@
         }
       } catch (error) {
         throw error;
+      }
+    }
+
+    async function updateStorageUsage() {
+      try {
+        const photosRef = collection(db, 'photos');
+        const q = query(photosRef, where('userId', '==', auth.currentUser.uid));
+        const querySnapshot = await getDocs(q);
+        let totalSize = 0;
+        for (const doc of querySnapshot.docs) {
+          const data = doc.data();
+          if (data.size) {
+            totalSize += data.size;
+          } else {
+            try {
+              const fullMeta = await getMetadata(storageRef(storage, data.fullUrl));
+              const thumbMeta = await getMetadata(storageRef(storage, data.thumbUrl));
+              totalSize += (fullMeta.size + thumbMeta.size);
+              await updateDoc(doc.ref, { size: fullMeta.size + thumbMeta.size });
+            } catch (error) {}
+          }
+        }
+        const mb = (totalSize / (1024 * 1024)).toFixed(2);
+        const gb = (totalSize / (1024 * 1024 * 1024)).toFixed(2);
+        document.getElementById('storage-usage').textContent = `Uso de almacenamiento: ${mb} MB (${gb} GB)`;
+      } catch (error) {
+        document.getElementById('storage-usage').textContent = 'Error al calcular uso de almacenamiento';
       }
     }
 
@@ -514,7 +623,7 @@
         $('#empty').style.display = state.photos.length ? 'none' : 'block';
         for (const p of state.photos) {
           const card = document.createElement('div');
-          card.className = 'card';
+          card.className = 'card' + (grid.className === 'list' ? ' list-view' : '');
           const img = document.createElement('img'); img.src = p.thumbUrl; img.alt = p.name; img.className = 'thumb';
           const meta = document.createElement('div'); meta.className = 'meta';
           const date = new Date(p.createdAt).toLocaleDateString();
@@ -686,10 +795,16 @@
       }
     };
 
-    // Cerrar modal al hacer clic fuera
+    // Cerrar modales al hacer clic fuera
     $('#viewer').addEventListener('click', (e) => {
       if (e.target === $('#viewer')) {
         $('#viewer').close();
+      }
+    });
+
+    $('#settings').addEventListener('click', (e) => {
+      if (e.target === $('#settings')) {
+        $('#settings').close();
       }
     });
 
